--- a/style.css
+++ b/style.css
@@ -1,3 +1,154 @@
-h2 {
-    padding-left: 2px;
+body{
+    background: #ECEEF1;
 }
+
+.sign-in{
+    display: flex;
+    justify-content: flex-end;
+    padding: 10px;
+}
+
+.sign-in div{
+    padding-right: 10px;
+}
+
+.sign-in div p{
+    color: #505050;
+    font: 12px "AvenirNext", Avenir, "Helvetica Neue", Helvetica, Arial, sans-serif;
+}
+
+.sign-in div a{
+    color: #0077C5;
+    font: 12px "AvenirNext", Avenir, "Helvetica Neue", Helvetica, Arial, sans-serif;
+}
+
+.sign-in button{
+    border-radius: 4px;
+    background: #0077C5;
+    border: 1px solid #4c4c4c;
+    color: white;
+    width: 102.56px;
+    height: 33px;
+}
+
+.intuit-logos{
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    padding-bottom: 20px;
+}
+
+.intuit-logos #intuit-logo{
+    width: 118px;
+    height: 35px;
+    padding-bottom: 20px;
+    padding-top: 20px;
+}
+
+.intuit-logos ol{
+    display: flex;
+}
+
+.intuit-logos .m-q-t{
+    height: 23px;
+    width: 23px;
+    border-radius: 50%;
+    padding-left: 5px;
+    padding-right: 5px; 
+}
+
+.intuit-logos .m-q-t-text{
+    padding-right: 5px;
+    padding-left: 5px;
+    font-size: 20px;
+    color: #939e97;
+    font-family: "AvenirNext", Avenir, "Helvetica Neue", Helvetica, Arial, sans-serif 
+}
+
+.form-div{
+    margin-left: auto;
+    margin-right: auto;
+    width: 380px;
+    background-color: white;
+    border: 1px solid #a4b0a8;
+    border-radius: 1%;
+}
+.form-header{
+    text-align: center;
+}
+
+.form-header h2{
+    color:#4C4C4C;
+    font-size: 24px;
+    font-family: "AvenirNext", Avenir, "Helvetica Neue", Helvetica, Arial, sans-serif; 
+    padding-top: 20px;
+}
+
+.form-header p{
+    color: #4C4C4C;
+    font-size: 14px;
+    font-family: "AvenirNext", Avenir, "Helvetica Neue", Helvetica, Arial, sans-serif;
+}
+
+.form-header a{
+    color: #0077C5;
+    font-size: 12px;
+    font-family: "AvenirNext", Avenir, "Helvetica Neue", Helvetica, Arial, sans-serif;
+}
+
+.form-container{
+    padding-top: 20px;
+    display: flex;
+    justify-content: center;
+}
+
+form{
+    width: 320px;
+    display: flex;
+    flex-direction: column;
+    align-content: center
+}
+
+form label{
+    font-size: 14px;
+    font-family: "AvenirNext", Avenir, "Helvetica Neue", Helvetica, Arial, sans-serif;
+    color: #404040;
+    line-height: 25px; 
+}
+
+input{
+    border: 1px solid #c6c9cc;
+    border-radius: 5px;
+    color: #888;
+    display: block;
+    margin: 5px 0 27px 0;
+    width: 100%;
+    height: 30px;
+}
+
+#submit-button{
+    border: 1px solid #0077C5;
+    border-radius: 5px;
+    background: #0077C5;
+    color: #FFFFFF;
+    padding: 11px 30px;
+    font-size: 16px;
+}
+
+.form-div p{
+    text-align: center;
+    line-height: 20px;
+    padding-top: 40px;
+    padding-right: 50px;
+    padding-left: 50px;
+    color: #757575;
+    font-size: 12px;
+    font-family: "AvenirNext", Avenir, "Helvetica Neue", Helvetica, Arial, sans-serif;
+    /* font-style: italic; */
+}
+
+.form-div a{
+    color: #0077C5;
+  }
+  
