--- a/style.css
+++ b/style.css
@@ -122,9 +122,19 @@ input{
     border-radius: 5px;
     color: #888;
     display: block;
-    margin: 5px 0 27px 0;
+    margin-top: 5px;
     width: 100%;
     height: 30px;
+}
+
+fieldset {
+    margin-bottom: 27px;
+    border: 0 none;
+}
+
+#note {
+    font-size: 10px;
+    font-family:  "AvenirNext", Avenir, "Helvetica Neue", Helvetica, Arial, sans-serif;
 }
 
 #submit-button{
@@ -152,3 +162,48 @@ input{
     color: #0077C5;
   }
   
+  .form-footer {
+      background: #ECEEF1;
+      height: 53px;
+  }
+
+  .form-footer p {
+      padding : 16px;
+      padding-bottom: 30px;
+      font-size: 10px;
+      font-family: "AvenirNext", Avenir, "Helvetica Neue", Helvetica, Arial, sans-serif; 
+      color: #8D9096
+  }
+
+  .page-footer {
+      text-align: center;
+      padding: 20px 20px;
+      font-size: 12px;
+      color: #505050;
+      font-family: "AvenirNext", Avenir, "Helvetica Neue", Helvetica, Arial, sans-serif;
+  }
+
+  .page-footer ol {
+    display: flex;
+    justify-content: center;
+  }
+
+  .page-footer li {
+      margin: 7px;
+  }
+
+.password-control {
+    position: relative;
+}
+
+#lock-icon {
+    position: absolute;
+    color: #c7c7c7;
+    font-size: 1.2em;
+    top: 40px;
+    right: 15px;
+}
+
+
+
+
