--- a/style.css
+++ b/style.css
@@ -1,209 +1,205 @@
-body{
-    background: #ECEEF1;
+body {
+  background: #eceef1;
 }
 
-.sign-in{
-    display: flex;
-    justify-content: flex-end;
-    padding: 10px;
+.sign-in {
+  display: flex;
+  justify-content: flex-end;
+  padding: 10px;
 }
 
-.sign-in div{
-    padding-right: 10px;
+.form-header p {
+  color: #4c4c4c;
+  font-size: 14px;
+  font-family: "AvenirNext", Avenir, "Helvetica Neue", Helvetica, Arial, sans-serif;
 }
 
-.sign-in div p{
-    color: #505050;
-    font: 12px "AvenirNext", Avenir, "Helvetica Neue", Helvetica, Arial, sans-serif;
+.sign-in div {
+  padding-right: 10px;
 }
 
-.sign-in div a{
-    color: #0077C5;
-    font: 12px "AvenirNext", Avenir, "Helvetica Neue", Helvetica, Arial, sans-serif;
+.form-div p {
+  text-align: center;
+  line-height: 20px;
+  padding-top: 40px;
+  padding-right: 50px;
+  padding-left: 50px;
+  color: #757575;
+  font-size: 12px;
+  font-family: "AvenirNext", Avenir, "Helvetica Neue", Helvetica, Arial, sans-serif;
 }
 
-.sign-in button{
-    border-radius: 4px;
-    background: #0077C5;
-    border: 1px solid #4c4c4c;
-    color: white;
-    width: 102.56px;
-    height: 33px;
+.form-footer p {
+  padding: 16px;
+  padding-bottom: 30px;
+  font-size: 10px;
+  font-family: "AvenirNext", Avenir, "Helvetica Neue", Helvetica, Arial, sans-serif;
+  color: #8d9096;
 }
 
-.intuit-logos{
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
-    padding-bottom: 20px;
+.sign-in div p {
+  color: #505050;
+  font: 12px "AvenirNext", Avenir, "Helvetica Neue", Helvetica, Arial, sans-serif;
 }
 
-.intuit-logos #intuit-logo{
-    width: 118px;
-    height: 35px;
-    padding-bottom: 20px;
-    padding-top: 20px;
+.form-header a {
+  color: #0077c5;
+  font-size: 12px;
+  font-family: "AvenirNext", Avenir, "Helvetica Neue", Helvetica, Arial, sans-serif;
 }
 
-.intuit-logos ol{
-    display: flex;
+.form-div a {
+  color: #0077c5;
 }
 
-.intuit-logos .m-q-t{
-    height: 23px;
-    width: 23px;
-    border-radius: 50%;
-    padding-left: 5px;
-    padding-right: 5px; 
+.sign-in div a {
+  color: #0077c5;
+  font: 12px "AvenirNext", Avenir, "Helvetica Neue", Helvetica, Arial, sans-serif;
 }
 
-.intuit-logos .m-q-t-text{
-    padding-right: 5px;
-    padding-left: 5px;
-    font-size: 20px;
-    color: #939e97;
-    font-family: "AvenirNext", Avenir, "Helvetica Neue", Helvetica, Arial, sans-serif 
+.sign-in button {
+  border-radius: 4px;
+  background: #0077c5;
+  border: 1px solid #4c4c4c;
+  color: white;
+  width: 102.56px;
+  height: 33px;
 }
 
-.form-div{
-    margin-left: auto;
-    margin-right: auto;
-    width: 380px;
-    background-color: white;
-    border: 1px solid #a4b0a8;
-    border-radius: 1%;
-}
-.form-header{
-    text-align: center;
+.intuit-logos {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  padding-bottom: 20px;
 }
 
-.form-header h2{
-    color:#4C4C4C;
-    font-size: 24px;
-    font-family: "AvenirNext", Avenir, "Helvetica Neue", Helvetica, Arial, sans-serif; 
-    padding-top: 20px;
+.intuit-logos #intuit-logo {
+  width: 118px;
+  height: 35px;
+  padding-bottom: 20px;
+  padding-top: 20px;
 }
 
-.form-header p{
-    color: #4C4C4C;
-    font-size: 14px;
-    font-family: "AvenirNext", Avenir, "Helvetica Neue", Helvetica, Arial, sans-serif;
+.intuit-logos ol {
+  display: flex;
 }
 
-.form-header a{
-    color: #0077C5;
-    font-size: 12px;
-    font-family: "AvenirNext", Avenir, "Helvetica Neue", Helvetica, Arial, sans-serif;
+.intuit-logos .m-q-t {
+  height: 23px;
+  width: 23px;
+  border-radius: 50%;
+  padding-left: 5px;
+  padding-right: 5px;
 }
 
-.form-container{
-    padding-top: 20px;
-    display: flex;
-    justify-content: center;
+.intuit-logos .m-q-t-text {
+  padding-right: 5px;
+  padding-left: 5px;
+  font-size: 20px;
+  color: #939e97;
+  font-family: "AvenirNext", Avenir, "Helvetica Neue", Helvetica, Arial, sans-serif;
 }
 
-form{
-    width: 320px;
-    display: flex;
-    flex-direction: column;
-    align-content: center
+.form-div {
+  margin-left: auto;
+  margin-right: auto;
+  width: 380px;
+  background-color: white;
+  border: 1px solid #a4b0a8;
+  border-radius: 1%;
 }
 
-form label{
-    font-size: 14px;
-    font-family: "AvenirNext", Avenir, "Helvetica Neue", Helvetica, Arial, sans-serif;
-    color: #404040;
-    line-height: 25px; 
+.form-header {
+  text-align: center;
 }
 
-input{
-    border: 1px solid #c6c9cc;
-    border-radius: 5px;
-    color: #888;
-    display: block;
-    margin-top: 5px;
-    width: 100%;
-    height: 30px;
+.form-header h2 {
+  color: #4c4c4c;
+  font-size: 24px;
+  font-family: "AvenirNext", Avenir, "Helvetica Neue", Helvetica, Arial, sans-serif;
+  padding-top: 20px;
+}
+
+.form-container {
+  padding-top: 20px;
+  display: flex;
+  justify-content: center;
+}
+
+form {
+  width: 320px;
+  display: flex;
+  flex-direction: column;
+  align-content: center;
+}
+
+form label {
+  font-size: 14px;
+  font-family: "AvenirNext", Avenir, "Helvetica Neue", Helvetica, Arial, sans-serif;
+  color: #404040;
+  line-height: 25px;
+}
+
+input {
+  border: 1px solid #c6c9cc;
+  border-radius: 5px;
+  color: #888;
+  display: block;
+  margin-top: 5px;
+  width: 100%;
+  height: 30px;
 }
 
 fieldset {
-    margin-bottom: 27px;
-    border: 0 none;
+  margin-bottom: 27px;
+  border: 0 none;
 }
 
 #note {
-    font-size: 10px;
-    font-family:  "AvenirNext", Avenir, "Helvetica Neue", Helvetica, Arial, sans-serif;
+  font-size: 10px;
+  font-family: "AvenirNext", Avenir, "Helvetica Neue", Helvetica, Arial, sans-serif;
 }
 
-#submit-button{
-    border: 1px solid #0077C5;
-    border-radius: 5px;
-    background: #0077C5;
-    color: #FFFFFF;
-    padding: 11px 30px;
-    font-size: 16px;
+#submit-button {
+  border: 1px solid #0077c5;
+  border-radius: 5px;
+  background: #0077c5;
+  color: #fff;
+  padding: 11px 30px;
+  font-size: 16px;
 }
 
-.form-div p{
-    text-align: center;
-    line-height: 20px;
-    padding-top: 40px;
-    padding-right: 50px;
-    padding-left: 50px;
-    color: #757575;
-    font-size: 12px;
-    font-family: "AvenirNext", Avenir, "Helvetica Neue", Helvetica, Arial, sans-serif;
-    /* font-style: italic; */
+.form-footer {
+  background: #eceef1;
+  height: 53px;
 }
 
-.form-div a{
-    color: #0077C5;
-  }
-  
-  .form-footer {
-      background: #ECEEF1;
-      height: 53px;
-  }
+.page-footer {
+  text-align: center;
+  padding: 20px 20px;
+  font-size: 12px;
+  color: #505050;
+  font-family: "AvenirNext", Avenir, "Helvetica Neue", Helvetica, Arial, sans-serif;
+}
 
-  .form-footer p {
-      padding : 16px;
-      padding-bottom: 30px;
-      font-size: 10px;
-      font-family: "AvenirNext", Avenir, "Helvetica Neue", Helvetica, Arial, sans-serif; 
-      color: #8D9096
-  }
+.page-footer ol {
+  display: flex;
+  justify-content: center;
+}
 
-  .page-footer {
-      text-align: center;
-      padding: 20px 20px;
-      font-size: 12px;
-      color: #505050;
-      font-family: "AvenirNext", Avenir, "Helvetica Neue", Helvetica, Arial, sans-serif;
-  }
-
-  .page-footer ol {
-    display: flex;
-    justify-content: center;
-  }
-
-  .page-footer li {
-      margin: 7px;
-  }
+.page-footer li {
+  margin: 7px;
+}
 
 .password-control {
-    position: relative;
+  position: relative;
 }
 
 #lock-icon {
-    position: absolute;
-    color: #c7c7c7;
-    font-size: 1.2em;
-    top: 40px;
-    right: 15px;
+  position: absolute;
+  color: #c7c7c7;
+  font-size: 1.2em;
+  top: 40px;
+  right: 15px;
 }
-
-
-
-
