--- a/style.css
+++ b/style.css
@@ -64,6 +64,7 @@ body {
   color: white;
   width: 102.56px;
   height: 33px;
+  cursor: pointer;
 }
 
 .intuit-logos {
@@ -99,6 +100,10 @@ body {
   font-size: 20px;
   color: #939e97;
   font-family: "AvenirNext", Avenir, "Helvetica Neue", Helvetica, Arial, sans-serif;
+}
+
+.external-link {
+    cursor: pointer;
 }
 
 .form-div {
@@ -156,6 +161,10 @@ fieldset {
   border: 0 none;
 }
 
+#bottom-text {
+     font-style: italic;
+}
+
 #note {
   font-size: 10px;
   font-family: "AvenirNext", Avenir, "Helvetica Neue", Helvetica, Arial, sans-serif;
@@ -168,6 +177,7 @@ fieldset {
   color: #fff;
   padding: 11px 30px;
   font-size: 16px;
+  cursor: pointer;
 }
 
 .form-footer {
