--- a/reset.css
+++ b/reset.css
@@ -11,38 +11,43 @@ small, strike, strong, sub, sup, tt, var,
 b, u, i, center,
 dl, dt, dd, ol, ul, li, form, label, legend,
 table, caption, tbody, tfoot, thead, tr, th, td,
-article, aside, canvas, details, embed, 
-figure, figcaption, footer, header, hgroup, 
-menu, nav, output, ruby, section, summary,
+article, aside, canvas, details, embed,
+figure, figcaption, footer, header, hgroup, menu, nav, output, ruby, section, summary,
 time, mark, audio, video {
-	margin: 0;
-	padding: 0;
-	border: 0;
-	font-size: 100%;
-	font: inherit;
-    vertical-align: baseline;
-    color: inherit;
-    text-decoration: none;
+		margin: 0;
+		padding: 0;
+		border: 0;
+		font-size: 100%;
+		font: inherit;
+    	vertical-align: baseline;
+    	color: inherit;
+    	text-decoration: none;
 }
+
 /* HTML5 display-role reset for older browsers */
+
 article, aside, details, figcaption, figure, 
 footer, header, hgroup, menu, nav, section {
-	display: block;
+		display: block;
 }
+
 body {
-	line-height: 1;
+		line-height: 1;
 }
+
 ol, ul {
-	list-style: none;
+		list-style: none;
 }
+
 blockquote, q {
-	quotes: none;
+		quotes: none;
 }
-blockquote:before, blockquote:after,
-q:before, q{
-	content: none;
+
+blockquote:before, blockquote:after, q:before, q {
+		content: none;
 }
+
 table {
-	border-collapse: collapse;
-	border-spacing: 0;
+		border-collapse: collapse;
+		border-spacing: 0;
 }
